- added home tab - in-progress: correct layout of search info alert - fixed download grid - changed contact from line text to card grid with icons for the visibility - added info in "how to cite" tab - data sanitising: changed id aliases 'nan' values to be '-' - datatable styling update (it will need makeover for dark mode) - added alert on no results for datatables for more intuitivity

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -240,3 +240,26 @@ table tr td .full-row-link {
 .nav-item:hover{
   background-color: rgba(13, 110, 253, 0.1);
 }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+  border-radius: 8px;
+  background: rgba(13, 110, 253, 0.7);
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  background: rgba(13, 110, 253, 0.1);
+  border-radius: 8px;
+  border: transparent;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:active {
+  box-shadow: inset 0 0 17px 10px rgb(17 17 17 / 20%);
+}
+
+.dataTables_wrapper .dataTables_filter input {
+  border-radius: 8px;
+}
+
+.dataTables_wrapper .dataTables_length select {
+  border-radius: 8px;
+}
